--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stablecoins.club</title>
+    <link
+      rel="icon"
+      href="./assets/favicon.ico"
+      type="image/x-icon"
+      sizes="400x400"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div class="absolute z-10 w-full p-4">
       <a href="https://stablecoins.club" class="flex items-center">
-        <img src="./logo.png" alt="stablecoins.club logo" width="28px" />
+        <img src="./assets/logo.png" alt="stablecoins.club logo" width="28px" />
         <span class="ml-2 font-semibold text-lg">Stablecoins.club </span>
       </a>
     </div>
@@ -20,11 +26,11 @@
         class="mx-auto max-w-md text-center mt-20 lg:mx-0 lg:mt-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">
-          Earn USDCs from tasks.
+          Earn USDCs from bounties.
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-900">
-          Start earning stablecoins without any upfront investment. Get your
-          first coins by completeing tasks!
+          The best way to get USDC stabelcoins is to earn them. Get your first
+          coins by completing bounties!
         </p>
         <div
           class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
@@ -33,15 +39,15 @@
             href="https://join.slack.com/t/stablecoinsclub/shared_invite/zt-27jeiy21z-kbduyQpyY_cbhI_ExvNe9g"
             target="_blank"
             class="rounded-md bg-white outline px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
-            >View Tasks</a
+            >Start Earning Now</a
           >
         </div>
       </div>
       <div class="relative mt-16 h-80 lg:mt-8">
         <img
           class="absolute left-0 top-0 w-[57rem] max-w-20 lg:max-w-none"
-          src="./USD-Coin-Logo-PNG-Images.png"
-          alt="USDC stablecoins"
+          src="./assets/USD-Coin-Logo-PNG-Images.png"
+          alt="USDC stablecoins logo"
         />
       </div>
     </div>
