--- a/index.html
+++ b/index.html
@@ -2,21 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Stablecoins.club</title>
-    <link
-      rel="icon"
-      href="./assets/favicon.ico"
-      type="image/x-icon"
-      sizes="400x400"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./assets/logo_icon.png" type="image/png" />
+    <link rel="canonical" href="https://stablecoins.club" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+
+    <meta property="og:site_name" content="Stablecoins.club" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Stablecoins.club" />
+    <meta
+      property="og:description"
+      content="Earn USDCs by completing bounties."
+    />
+    <meta property="og:url" content="https://stablecoins.club" />
+    <meta
+      property="og:image"
+      content="https://levels.io/content/images/size/w1200/2020/11/photo-1442120108414-42e7ea50d0b5-2.jpeg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Stablecoins.club" />
+    <meta
+      name="twitter:description"
+      content="Earn USDCs by completing bounties."
+    />
+    <meta name="twitter:url" content="https://stablecoins.club" />
+    <meta name="twitter:image" content="./assets/logo_bg.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="734" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Website",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Stablecoins.club",
+          "url": "https://stablecoins.club/",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "./assets/logo_bg.png",
+            "width": 60,
+            "height": 60
+          }
+        },
+        "headline": "Stablecoins.club",
+        "url": "https://stablecoins.club",
+        "mainEntityOfPage": "https://stablecoins.club"
+      }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-ELEEGE0V99"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-ELEEGE0V99");
+    </script>
   </head>
   <body>
     <div class="absolute z-10 w-full p-4">
       <a href="https://stablecoins.club" class="flex items-center">
         <img src="./assets/logo.png" alt="stablecoins.club logo" width="28px" />
-        <span class="ml-2 font-semibold text-lg">Stablecoins.club </span>
+        <span class="ml-2 font-bold text-lg">Stablecoins.club </span>
       </a>
     </div>
     <div
@@ -26,7 +82,7 @@
         class="mx-auto max-w-md text-center mt-20 lg:mx-0 lg:mt-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">
-          Earn USDCs from bounties.
+          Earn USDC from bounties.
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-900">
           The best way to get USDC stabelcoins is to earn them. Get your first
