--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         class="mx-auto max-w-md text-center mt-20 lg:mx-0 lg:mt-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">
-          Earn USDC from bounties.
+          Earn USDCs from bounties.
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-900">
           The best way to get USDC stabelcoins is to earn them. Get your first
