--- a/index.html
+++ b/index.html
@@ -88,14 +88,17 @@
           The best way to get USDC stabelcoins is to earn them. Get your first
           coins by completing bounties!
         </p>
+        <div class="mt-10 font-bold text-left">Active bounties</div>
         <div
-          class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start"
+          class="mt-4 flex items-center justify-center gap-x-6 lg:justify-start"
         >
           <a
-            href="https://join.slack.com/t/stablecoinsclub/shared_invite/zt-27jeiy21z-kbduyQpyY_cbhI_ExvNe9g"
+            href="https://stablecoinsclub.slack.com/archives/C066V062VJT/p1701178000236809"
             target="_blank"
             class="rounded-md bg-white outline px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
-            >Start Earning Now</a
+            >Offering a bounty of 15 USDC split between three winners (5 USDC
+            each) for the most helpful feedback on improving this community
+            (stablecoins.club), chosen through community vote.</a
           >
         </div>
       </div>
