--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <a
             href="https://stablecoinsclub.slack.com/archives/C066V062VJT/p1701178000236809"
             target="_blank"
-            class="rounded-md bg-white outline px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
+            class="rounded-md bg-white outline px-3.5 py-2.5 text-sm font-semibold text-gray-900 text-left shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
             >Offering a bounty of 15 USDC split between three winners (5 USDC
             each) for the most helpful feedback on improving this community
             (stablecoins.club), chosen through community vote.</a
