--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           Earn USDCs from bounties.
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-900">
-          The best way to get USDC is to earn them. Get your first stablecoin by
-          completing bounties!
+          The best way to get USDCs is to earn them. Get your first stablecoins
+          by completing bounties!
         </p>
         <div class="mt-10 font-bold text-left">Active bounties</div>
         <div
