--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Stablecoins.club" />
     <meta
       property="og:description"
-      content="Earn USDCs by completing bounties."
+      content="Earn USDC by completing bounties."
     />
     <meta property="og:url" content="https://stablecoins.club" />
     <meta
@@ -26,7 +26,7 @@
     <meta name="twitter:title" content="Stablecoins.club" />
     <meta
       name="twitter:description"
-      content="Earn USDCs by completing bounties."
+      content="Earn USDC by completing bounties."
     />
     <meta name="twitter:url" content="https://stablecoins.club" />
     <meta name="twitter:image" content="./assets/logo_bg.png" />
@@ -82,10 +82,10 @@
         class="mx-auto max-w-md text-center mt-20 lg:mx-0 lg:mt-0 lg:flex-auto lg:py-32 lg:text-left"
       >
         <h2 class="text-3xl font-bold tracking-tight text-black sm:text-4xl">
-          Earn USDCs from bounties.
+          Earn USDC from bounties.
         </h2>
         <p class="mt-6 text-lg leading-8 text-gray-900">
-          The best way to get USDCs is to earn them. Get your first stablecoins
+          The best way to get USDC is to earn them. Get your first stablecoins
           by completing bounties!
         </p>
         <div class="mt-10 font-bold text-left">Active bounties</div>
