--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           class="mt-4 flex items-center justify-center gap-x-6 lg:justify-start"
         >
           <a
-            href="https://stablecoinsclub.slack.com/archives/C066V062VJT/p1701181353954669"
+            href="https://join.slack.com/t/stablecoinsclub/shared_invite/zt-27jeiy21z-kbduyQpyY_cbhI_ExvNe9g"
             target="_blank"
             class="rounded-md bg-white outline px-3.5 py-2.5 text-sm font-semibold text-gray-900 text-left shadow-sm hover:bg-gray-100 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white"
             >Offering a bounty of 15 USDC split between three winners (5 USDC
